Explain how to pass an option to a native image